[package]
name = "rustft"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "STFT and ISTFT in Rust matching PyTorch's accuracy. WIP"
readme = "README.md"
homepage = "https://github.com/phudtran/rustft"
repository = "https://github.com/phudtran/rustft"

categories = ["multimedia::audio", "mathematics", "algorithms", "multimedia"]

keywords = ["audio", "ISTFT", "STFT", "spectrogram", "signal_processing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rustft"
crate-type = ["cdylib"]

[dependencies]
ndarray = "0.16.1"
num-complex = "0.4.6"
numpy = "0.21.0"
pyo3 = "0.21.0"
rustfft = "6.2.0"
