[workspace]
members = [
    "rustft",
    "pyo3",
]
resolver = "2"

[workspace.package]
name = "rustft"
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "WIP. STFT and ISTFT in Rust matching PyTorch"
readme = "README.md"
homepage = "https://github.com/phudtran/rustft"
repository = "https://github.com/phudtran/rustft"

categories = ["multimedia::audio", "mathematics", "algorithms", "multimedia"]
keywords = ["audio", "ISTFT", "STFT", "spectrogram", "signal_processing"]

[workspace.dependencies]
rustft = { path = "./rustft", package = "rustft", version = "0.0.0" }
pyo3 = { path = "./pyo3", package = "pyo3", version = "0.0.0" }


[profile.release]
panic = "abort"   # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true        # Enables link to optimizations
opt-level = "z"   # Optimize for binary size
strip = true      # Remove debug symbols
rpath = true

[profile.release-with-debug]
inherits = "release"
debug = true