[package]
name = "benchmarks"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
readme = "README.md"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rustft"
crate-type = ["cdylib"]

[dependencies]
# rustft = { path = "../rustft", package = "rustft"}
rustft = "0.0.8"
num-complex = "0.4.6"
numpy = "0.21.0"
pyo3 = "0.21.0"
rustfft = "6.2.0"

