[package]
name = "rustft-pyo3"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
readme = "README.md"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rustft"
crate-type = ["cdylib"]

[dependencies]
stft = { path = "../rustft", package = "rustft", version = "0.0.1" }
num-complex = "0.4.6"
numpy = "0.21.0"
pyo3 = "0.21.0"

